--- a/README
+++ b/README
@@ -1,24 +1,22 @@
 Czech Festival Voice
 ====================
 
-This package contains a complete Czech diphone voice for Festival, including
-all files and tools necessary for its further development.
+This package contains a complete child male Czech diphone voice for Festival,
+including all files and tools necessary for its further development.
 
 You can find installation instructions in the file INSTALL.
 
 The way the package was created is thoroughly documented in the subdirectory
-`doc' (in Czech only for now).  Anybody who wants to create another Czech
-diphone voice for Festival can follow that documentation.
+`doc'.  Anybody who wants to create another Czech diphone voice for Festival
+can follow that documentation.
 
 The home page of the project is
 http://www.freebsoft.org/festival-czech-diphone-database .
 
-Czech Festival synthesis has been developed by Brailcom, o.p.s.
-Nadační fond Českého rozhlasu, Seznam.cz, a.s. and European Commission (the
-Leonardo da Vinci program) provided financial contributions to the project.
-Institute of Phonetics at Faculty of Philosophy & Arts, Charles University,
-Prague, led by prof. PhDr. Zdena Palková, CSc. provided expert knowledge
-and consultations.
+This product was created and developed within the projects "Olomouc Chance for
+Blind Pupils" (reg. number CZ.1.07/1.2.12/02.0015) and "Support Center for
+Visually Impaired Pupils" (reg. number CZ.1.07/1.2.00/14.0111), which are
+co-financed from European Social Fund and Czech Republic's state budget.
 
 Questions, suggestions, etc. can be addressed to
 festival-czech@lists.freebsoft.org.
